<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".HowToPlayFragment">

    <TextView
        android:id="@+id/text_view_rules_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_48dp"
        android:text="@string/howtoplay_header_text"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/extra_large_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/highscore_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="@dimen/radius_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_rules_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/margin_8dp"
            android:paddingTop="@dimen/margin_16dp"
            android:paddingEnd="@dimen/margin_8dp"
            android:paddingBottom="@dimen/margin_16dp">

            <TextView
                android:id="@+id/text_view_rules_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/howtoplay_info_title_1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_rules_info_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/howtoplay_info_text_1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_rules_title_1" />

            <TextView
                android:id="@+id/text_view_rules_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/howtoplay_info_title_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_rules_info_1" />

            <TextView
                android:id="@+id/text_view_rules_info_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/howtoplay_info_text_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_rules_title_2" />

            <TextView
                android:id="@+id/text_view_rules_title_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/howtoplay_info_title_3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_rules_info_2" />

            <TextView
                android:id="@+id/text_view_rules_info_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/howtoplay_info_text_3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_rules_title_3" />

            <TextView
                android:id="@+id/text_view_rules_title_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/howtoplay_info_title_4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_rules_info_3" />

            <TextView
                android:id="@+id/text_view_rules_info_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/howtoplay_info_text_4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_rules_title_4" />

            <TextView
                android:id="@+id/text_view_rules_title_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/howtoplay_info_title_5"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_rules_info_4" />

            <TextView
                android:id="@+id/text_view_rules_info_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/howtoplay_info_text_5"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_rules_title_5" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
